--- a/Inlämning_Lab4_Clustering and_Association_analysis.ipynb
+++ b/Inlämning_Lab4_Clustering and_Association_analysis.ipynb
@@ -466,7 +466,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"groceries.csv\") as groceries_file:\n",
+    "with open(\"Data/groceries.csv\") as groceries_file:\n",
     "    dataset = list(csv.reader(groceries_file))"
    ]
   },
